--- a/src/app/components/calc/calc.component.css
+++ b/src/app/components/calc/calc.component.css
@@ -10,20 +10,54 @@
     padding: 10px 5px 50px 5px;
 }
 
+@media screen and (max-width: 420px) {
+    .calculator
+    {
+        width: 100%;
+        margin-top: 10px;
+    }
+    .button
+    {
+        width: 15%;
+    }
+}
+
 .card
 {
     border: none;
 }
 
-.top input
+.top p
 {
     width: 90%;
     margin: 5%;
     margin-top: 25px;
     height: auto;
-    min-height: 120px;
+    min-height: 125px;
     border: 2px solid #000;
     border-radius: 5px;
+}
+
+.ansandback
+{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    margin-left: 5%;
+}
+
+.ansandback span
+{
+    height: 40px;
+    border: 1px solid #000;
+    background-color: #c2c2c2;
+    border-radius: 8px;
+    vertical-align: middle;
+    width: 100%;
+}
+.ansandback b
+{
+    margin-top: 5px;
+    margin-right: 8px;
 }
 
 .bottom .allbtns
@@ -32,7 +66,7 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-rows: 25%;
     margin: 0% 5%;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 50px;
 }
 
@@ -67,5 +101,5 @@ button:hover
 .orange
 {
     background-color: orange;
-    font-size: 20px;
+    font-size: 19px;
 }
